# TypeAnnotations

./: Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci-pipeline.yml
basic/: Optional.py  any.py  dict.py  final.py  kwargs.py  list.py  parameter.py  tuple.py  typealias.py  union.py  variable.py
